--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,13 @@ target/
 assignment/.ipynb_checkpoints/Map-checkpoint.ipynb
 
 NB/.ipynb_checkpoints/Ex6-checkpoint.ipynb
+
+NB/twitterconfig.py
+
+NB/.ipynb_checkpoints/Assignment2-checkpoint.ipynb
+
+NB/.ipynb_checkpoints/Ex8-checkpoint.ipynb
+
+NB/.ipynb_checkpoints/Sklearn-checkpoint.ipynb
+
+NB/.ipynb_checkpoints/Ex7-checkpoint.ipynb
